[package]
name = "automap"
version = "0.1.0"
authors = ["Michael Dougherty <maackle.d@gmail.com>"]
repository = "https://github.com/maackle/automap-rs"
description = "Simple pattern to implement key-value maps where the value type contains the key type"
keywords = ["hashmap", "kv-store"]
categories = ["data-structures", "rust-patterns"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
cfg-if = "1.0"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"], optional = true }
shrinkwraprs = "0.3"
